--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
   padding: 0;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  /*min-height: 100vh;*/
 }
 
 header {
@@ -35,7 +35,10 @@ footer {
   color: #fff;
   padding: 1rem;
   text-align: center;
-  margin-top: auto; /* This property pushes the footer to the bottom of the page */
+  margin: inherit;
+  height: 50px;
+  
+  
 }
 
 footer p {
