--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
   padding: 0;
   display: flex;
   flex-direction: column;
-  /*min-height: 100vh;*/
+  min-height: 100vh;
 }
 
 header {
@@ -35,10 +35,7 @@ footer {
   color: #fff;
   padding: 1rem;
   text-align: center;
-  margin: inherit;
-  height: 50px;
-  
-  
+  margin-top: auto;
 }
 
 footer p {
@@ -82,7 +79,8 @@ input[type="password"] {
 }
 
 input[type="submit"] {
-  background-color: #333;border: none;
+  background-color: #333;
+  border: none;
   border-radius: 4px;
   color: #fff;
   padding: 0.5rem;
